--- a/index.html
+++ b/index.html
@@ -4,9 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Eric's Portfolio!</title>
+    <style>
+    h1{
+        color: blue
+    }
+    h3{}
+    </style>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1 style="color: firebrick;">Hello World!!!!!</h1>
+    <p>What up world. I am a beginner, but I will get it together!</p>
+    <h3>some contact information</h3>
+    <img src="https://scontent-ort2-1.xx.fbcdn.net/v/t1.0-9/25289734_10211196251164521_4701402657721650175_n.jpg?_nc_cat=0&oh=a345b45d973727fdc78a97c0dba9eedd&oe=5B763460" alt="my face">
+    <ol>
+        <li>
+            Twitter
+        </li>
+        <li>
+            Github
+        </li>
+        <li>
+            <a href="https://www.facebook.com">Facebook</a>
+        </li>
+    </ol>
 </body>
 </html>
