--- a/index.html
+++ b/index.html
@@ -5,18 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Eric's Portfolio!</title>
-    <style>
-    h1{
-        color: blue
-    }
-    h3{}
-    </style>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <h1 style="color: firebrick;">Hello World!!!!!</h1>
+        <div id="navigation"></div>
+        <div id="header">
+    <h1 style="color: firebrick;">Hello World!!!!!</h1></div>
+    <div id="content"></div>
     <p>What up world. I am a beginner, but I will get it together!</p>
     <h3>some contact information</h3>
-    <img src="https://scontent-ort2-1.xx.fbcdn.net/v/t1.0-9/25289734_10211196251164521_4701402657721650175_n.jpg?_nc_cat=0&oh=a345b45d973727fdc78a97c0dba9eedd&oe=5B763460" alt="my face">
+    <img src="https://scontent-ort2-1.xx.fbcdn.net/v/t1.0-9/25289734_10211196251164521_4701402657721650175_n.jpg?_nc_cat=0&oh=a345b45d973727fdc78a97c0dba9eedd&oe=5B763460" alt="my face"></div>
+    <div id="footer"></div>
     <ol>
         <li>
             Twitter
@@ -27,6 +26,6 @@
         <li>
             <a href="https://www.facebook.com">Facebook</a>
         </li>
-    </ol>
+    </ol></div>
 </body>
 </html>
