div and inline info

--- a/index.html
+++ b/index.html
@@ -8,9 +8,18 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-        <div id="navigation"></div>
+    <div id="navigation">
+        <ul>
+            <li>
+                <a href="/blog">blog</a>
+            </li>
+            <li>
+                <a href="/projects">projects</a>
+            </li>
+        </ul>
+    </div>
         <div id="header">
-    <h1 style="color: firebrick;">Hello World!!!!!</h1></div>
+    <h1 style="color: black;">Hello World!!!!!</h1></div>
     <div id="content"></div>
     <p>What up world. I am a beginner, but I will get it together!</p>
     <h3>some contact information</h3>
