--- a/projects/index.html
+++ b/projects/index.html
@@ -5,8 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Eric's Project Page :)</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>WELCOME TO THE WILD SIDE
 <body>
-    
+       <div id="navigation">
+
+            <ul>
+                    <li>
+                        <a href="../blog">blog</a>
+                    </li>
+                    <li>
+                        <a href="../projects">projects</a>
+                    </li>
+                </ul>
+    </div>
 </body>
+ 
 </html>
