--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="container">
     <p>What up world. I am a beginner, but I will get it together!</p>
     <h3>some contact information</h3>
-    <img src="https://scontent-ort2-1.xx.fbcdn.net/v/t1.0-9/25289734_10211196251164521_4701402657721650175_n.jpg?_nc_cat=0&oh=a345b45d973727fdc78a97c0dba9eedd&oe=5B763460" alt="my face"></div>
+    <img src="/NEW IMAGES FOR SITE/Eric.JPG" alt="my face"></div>
     </div>
     </div>
     
