--- a/projects/index.html
+++ b/projects/index.html
@@ -11,11 +11,19 @@
        <div id="navigation">
 
             <ul>
+                    <li> <a href="/">Home</a>
+                    </li>
                     <li>
-                        <a href="../blog">blog</a>
+                        <a href="../blog">Resume</a>
                     </li>
                     <li>
                         <a href="../projects">projects</a>
+                        <ul>
+                                <li>First</li>
+                                <li>Second</li>
+                                <li>Third</li>
+                                <li>Fourth</li>
+                        </ul>
                     </li>
                 </ul>
     </div>
