--- a/Contact/index.html
+++ b/Contact/index.html
@@ -5,14 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Contact</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <h1>Contact Me!</h1>
 
-<form action="form-responses/new" method="POST">
-    <ul class="contact">
 
+<body>
+  <div id="Navigation:">
+    <ul>
+      <li> <a href="/">Home</a>
+      </li>
+      <li>
+        <a href="/blog">Resume</a>
+  </li>
+  <li>
+      <a href="/projects">Projects</a>
+      <ul>
+          <li>First</li>
+          <li>Second</li>
+          <li>Third</li>
+          <li>Fourth</li>
+       </ul>
     </ul>
+  </div>
+  <form action="//formspree.io/erichumphrey10@yahoo.com" method="POST">
+    
 
     <input type="text" name="firstname" value="First Name" size="100" autofocus>
     <input type="text" name="lastname" value="Last Name" size="100">
@@ -46,7 +64,5 @@
     <textarea name="user_message" rows="8" cols="40"></textarea>
     <input type="submit">
   </form>
-<body>
-    
 </body>
 </html>
