--- a/projects/index.html
+++ b/projects/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Eric's Project Page :)</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
     <link rel="stylesheet" href="../css/style.css">
 </head>WELCOME TO THE WILD SIDE
@@ -27,6 +28,25 @@
                         </ul>
                     </li>
                 </ul>
+    </div>
+    <div id="footer:">
+        <ul>
+            <li>
+                <a href="https://github.com/blairthemachine">
+                    <i class="fab fa-github"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://twitter.com/">
+                    <i class="fab fa-twitter"></i>
+                </a>
+            </li>
+            <li>
+                <a href="erichumphrey10@yahoo.com">
+                    <i class="fab fa-yahoo"></i>
+                </a>
+            </li>
+        </ul>
     </div>
 </body>
  
