--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Eric's Portfolio!</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
     <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -12,6 +13,8 @@
 
 
 <body>
+
+
     <div id="navigation">
         <ul class="container"></ul>
         <ul>
@@ -62,13 +65,19 @@
     <div id="footer">
     <ul>
         <li>
-            <a href="https://github.com/blairthemachine">Github</a>
+            <a href="https://github.com/blairthemachine">
+                <i class="fab fa-github"></i>
+            </a>
         </li>
         <li>
-            <a href="https://twitter.com/">Twitter</a>
+            <a href="https://twitter.com/">
+                <i class="fab fa-twitter"></i>
+            </a>
         </li>
         <li>
-            <a href="erichumphrey10@yahoo.com">Email</a>
+            <a href="erichumphrey10@yahoo.com">
+                <i class="fab fa-yahoo"></i>
+            </a>
         </li>
     </ul>
 </div>
