--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 
 
     <div id="navigation">
-        <ul class="container"></ul>
         <ul>
                 <li> <a href="/">Home</a>
                 </li>
@@ -81,5 +80,8 @@
         </li>
     </ul>
 </div>
+
+
+<script type="text/javascript" src="index.js"></script>
 </body>
 </html>
