--- a/projects/index.html
+++ b/projects/index.html
@@ -21,10 +21,19 @@
                     <li>
                         <a href="../projects">projects</a>
                         <ul>
-                                <li>First</li>
-                                <li>Second</li>
-                                <li>Third</li>
-                                <li>Fourth</li>
+                                <li>First
+                                    <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, quaerat? Natus commodi eius iure debitis doloremque velit praesentium ducimus optio, eum cumque eligendi voluptate pariatur impedit possimus eos vel repellat.</h1>
+                                </li>
+                                
+                                <li>Second
+                                    <h1>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem, dolorem, dolorum dolore in ratione deserunt facere, nam commodi ipsa quisquam ad. Doloremque ducimus magnam vel ullam aliquid sit animi facere.</h1>
+                                </li>
+                                <li>Third
+                                    <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit. At, ab ipsa. Harum explicabo commodi eos blanditiis voluptas, impedit, voluptatibus excepturi fugit magnam atque animi, perspiciatis voluptatem sequi dolorum mollitia iure.</h1>
+                                </li>
+                                <li>Fourth
+                                    <h1>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis cum, corporis, sed quam ab consectetur iure at qui laboriosam consequuntur eaque excepturi dolores repudiandae, quos repellendus. Laboriosam minus reprehenderit non?</h1>
+                                </li>
                         </ul>
                     </li>
                 </ul>
